# brain2qwerty

./: .gitignore  AGENT_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docusaurus.config.js  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
brain2qwerty/: AGENT_README.md  callbacks.py  compute_cache.py  linear_model.py  main.py  metrics.py  pl_module.py  pyproject.toml  splitter.py  utils.py
brain2qwerty/brain2qwerty_v1/: README.md  cli.py  pl_module.py
brain2qwerty/brain2qwerty_v1/scripts/: ngram_decoding.py
brain2qwerty/brain2qwerty_v2/: README.md  pl_module.py
brain2qwerty/grids/: defaults.py  run_grid.py
brain2qwerty/scripts/: extract_predictions.py  ngram_decoding.py
brain2qwerty/studies/: __init__.py  englishbcbl.py  spanishbcbl.py
brain2qwerty/tests/: conftest.py  live_spanish_check.py  test_callbacks.py  test_linear_model.py  test_metrics.py  test_ngram.py  test_pipeline.py  test_pl_module.py  test_scripts.py  test_splitter.py  test_utils.py  test_v1_model.py  test_v1_pl_module.py  test_v1_scripts.py  test_v1_transforms.py  test_v2_losses.py  test_v2_model.py
brain2qwerty_v1/: README.md  __init__.py  callbacks.py  main.py  metrics.py  transforms.py
brain2qwerty_v1/config/: model_config.py  xp_config.py
brain2qwerty_v1/scripts/: extract_predictions.py
brain2qwerty_v2/: README.md  __init__.py  augmentations.py  callbacks.py  cli.py  ctc_segmenter.py  data.py  losses.py  main.py  metrics.py  models.py  transforms.py  utils.py
brain2qwerty_v2/config/: model_config.py  xp_config.py
brain2qwerty_v2/scripts/: extract_predictions.py
docs/: index.html
docs/assets/: best_complete_predictions.csv
docs/assets/hero-video/: manifest_rock.json
docs/assets/images/: prediction_animation_keyboard.webm  prediction_animation_sentence.webm
docs/src/: demo-v2.css  demo.js  hero-video.js  results-explorer.js  sentences.js
neuralset/: README.md  pyproject.toml
neuralset/neuralset/: __init__.py  base.py  data.py  dataloader.py  events.py  helpers.py  segments.py  utils.py
neuralset/neuralset/features/: __init__.py  base.py  neuro.py
neuralset/neuralset/infra/: __init__.py
neuralset/neuralset/studies/: pinet2024.py
neuraltrain/: README.md  pyproject.toml
neuraltrain/neuraltrain/: __init__.py  utils.py
neuraltrain/neuraltrain/losses/: __init__.py  base.py  losses.py
neuraltrain/neuraltrain/metrics/: __init__.py  base.py  metrics.py
neuraltrain/neuraltrain/models/: __init__.py  base.py  common.py  simpleconv.py  transformer.py
neuraltrain/neuraltrain/optimizers/: __init__.py  base.py
studies/: __init__.py  spanishbcbl.py
tests/: live_spanish_check.py  test_cli_wandb.py  test_main_commands.py  test_v1_callbacks.py  test_v1_model.py  test_v1_pl_module.py  test_v1_transforms.py  test_v1_utils_sampler.py  test_v2_augmentations.py  test_v2_callbacks.py  test_v2_data.py  test_v2_metrics.py  test_v2_model.py  test_v2_pl_module_unit.py  test_v2_scripts.py  test_v2_transforms.py
