# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the license found in the
# LICENSE file in the root directory of this source tree.

[project]
name = "brain2qwerty"
version = "1.0.0"
description = "Non-invasive decoding of typed sentences from brain activity using MEG and EEG."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Jarod Levy"},
    {name = "Mingfang (Lucy) Zhang"},
    {name = "Svetlana Pinet"},
    {name = "Jeremy Rapin"},
    {name = "Hubert Banville"},
    {name = "Stephane d'Ascoli"},
    {name = "Jean-Remi King"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "lightning>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "torchmetrics>=1.1",
    "Levenshtein>=0.21",
]

[project.optional-dependencies]
lm = [
    "kenlm",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "x_transformers>=1.27.20",
]

[project.urls]
Paper = "https://doi.org/10.1038/s41593-025-XXXXX"
Source = "https://github.com/facebookresearch/brain2qwerty"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brain2qwerty*"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["brain2qwerty"]